Unique design throughout b-card for all pages bugs 1mobile view buttons needs fix

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,7 +4,7 @@
 @import 'node_modules/bootstrap/scss/bootstrap.scss';
 @import 'node_modules/bootstrap-vue/src/index.scss';
 #body-content, #navbar{
-    background-color: #dde4e7 ;
+    background-color: #e1e8eb ;
 }
 .bottom_shadow{
     -webkit-box-shadow: 1px 2px 2px 0px #999;
