--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -48,3 +48,36 @@ body{
     }
   }
 
+// route ani
+
+.route-child {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+  .route-ani-enter {
+    -webkit-transform: translate(30px, 0);
+    transform: translate(30px, 0);
+    opacity: 0;
+  }
+  .route-ani-leave-to {
+    // -webkit-transform: translate(-30px, 0);
+    // transform: translate(-30px, 0);
+    opacity: 0;
+  }
+  .route-ani-enter-to {
+    opacity: 1;
+  }
+//   .route-ani-leave {
+//     opacity: 1;
+//   }
+  .route-ani-enter-active{
+      position: absolute;
+      transition: all .5s;
+  }
+  .route-ani-leave-active {
+    position: absolute;
+    transition: all .2s;
+  }
